# tricot-lang

./: Cargo.toml  README.md
assets/: logo_tricot_test.png:Zone.Identifier
examples/: ecs.tco  hello_world.trl  random.tco  random.trl
src/: interpreter.rs  lexer.rs  lib.rs  main.rs  types.rs  values.rs
src/ecs/: ecs.rs
src/interpreter/: ecs_registry.rs  interpreter.rs  mod.rs
src/parser/: ast.rs  parser.rs
src/types/: type_checker.rs  types.rs
tests/: interpreter_tests.rs  lexer_tests.rs  parser_tests.rs  type_checker_tests.rs
